fix: make sure input is visible when no tags are overflowed

--- a/app/assets/stylesheets/_sn.scss
+++ b/app/assets/stylesheets/_sn.scss
@@ -222,6 +222,10 @@
   height: 2.5rem;
 }
 
+.h-18 {
+  height: 4.5rem;
+}
+
 .max-h-120 {
   max-height: 30rem;
 }
